--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,3 +1,5 @@
-# Initiatives to encourage R Core contributions
+# Initiatives
 
-Many of these ideas are inspired by the work of other developer communities as I discuss here: https://youtu.be/BbpkKzz71EY?t=1045.
+###  Encouraging R Core contributions
+
+Many of these ideas are inspired by the work of other developer communities as Heather Turner discussed here: https://youtu.be/BbpkKzz71EY?t=1045.
