--- a/08-openness.Rmd
+++ b/08-openness.Rmd
@@ -1,3 +1,5 @@
-# Openness of this process itself
+# Openness
+
+## Openness of the Process itself
 
  - Get input from community on ideas via discuss forum like rOpensci?
