--- a/05-help.Rmd
+++ b/05-help.Rmd
@@ -1,4 +1,6 @@
-# Identify specific areas where help is needed
+# Help
+
+## Identify specific areas where help is needed
 
 - Help needed on recommended packages: MASS, survival
 - Testing pre-releases
