--- a/02-getting_started.Rmd
+++ b/02-getting_started.Rmd
@@ -12,7 +12,7 @@ To install $\textsf{R}$ in Windows follow these steps:
 
 3. Select `base` subdirectory. Alternatively, you can select `install R for the first time`, it leads to the same page. The current official stable release distribution of $\textsf{R}$ can be downloaded from here. (Along with the link to the current official stable release, links to the development snapshot build and to the previous releases, are also available on this page).
 
-4. This distribution is distributed as an installer `R-x.y.z-win.exe`. The `x.y.z` in the $\textsf{R}$ system version represent the major, minor, and patchlevel version numbers, respectively.
+4. This distribution is distributed as an installer `R-x.y.z-win.exe`. The `x.y.z` in the $\textsf{R}$ system version represent the major, minor, and patchlevel numbers, respectively.
 
 5. This has to be run in the Windows-style installer.
 
@@ -32,11 +32,11 @@ To install $\textsf{R}$ in Windows follow these steps:
   
 5. When there is a change in the minor version of $\textsf{R}$ (say, from 4.0.3 to 4.1.0), then the library names (folder `R\win-library\x.y` of your home directory, `R\win64-library\x.y` on 64-bit builds), will need to be updated too. For doing this, copy (say) `R\win-library\4.0` to `R\win-library\4.1` and then run the `update.packages(checkBuilt=TRUE, ask=FALSE)` command.
 
+6. Daily [tarballs](https://stat.ethz.ch/R/daily/) are available for the patched version of the current release (`r-patched`), and the development version of the current release (`r-devel`). The same are also available via the [R Subversion repository](https://svn.R-project.org/R/)
+
 ## Building $\textsf{R}$ and $\textsf{R}$ packages
 
-`RTools` is the [subdirectory](https://cran.r-project.org/bin/windows/Rtools/) which you want to build $\textsf{R}$ or your own $\textsf{R}$ package(s) on Windows. 
-
-### What tools you need to build $\textsf{R}$ on Windows?
+### What tools you need to build $\textsf{R}$ from source on Windows?
 
 1. `RTools` is the [subdirectory](https://cran.r-project.org/bin/windows/Rtools/) which you want to build $\textsf{R}$ or your own $\textsf{R}$ package(s) on Windows. 
 
@@ -44,26 +44,31 @@ To install $\textsf{R}$ in Windows follow these steps:
 
 ### How to setup `RTools`?
 
-## Get the source code 
+1. The executable version of `RTools` that is specific to your requirements can be downloaded from https://cran.r-project.org/bin/windows/Rtools/ and run in the Windows-style installer. 
 
-## Compile and build
+2. After completing the installation, you need to put the location of the RTools $\textit{make}$ $\textit{utilities}$ on the `PATH`. For doing this, exceute the following commands in $\textsf{R}$:
 
-### UNIX
+```{r, results='hide'}
+writeLines('PATH="${RTOOLS40_HOME}\\usr\\bin;${PATH}"', con = "~/.Renviron")
+```
 
-### Windows
+Restart $\textsf{R}$ now. Verify that $\textit{make}$ can be found using the following command. (The output of the command should show the path where you installed `RTools`):
 
-## Install dependencies
+```{r, results='hide'}
+Sys.which("make")
+## "C:\\rtools40\\usr\\bin\\make.exe"
+```
 
-### Linux
+If the above works, then try installing an $\textsf{R}$ package from source:
 
-### maxOS and OS X
+```{r, results='hide'}
+## install.packages("jsonlite", type = "source")    ## An example
+```
 
-## Regenerate `configure`
+If you are successful in installing an $\textsf{R}$ package from source, then the setup for `RTools` is completed.
 
-## Troubleshoot the build
+### How to build $\textsf{R}$?
 
-### Avoid recreating auto-generated files
+To build $\textsf{R}$ for Windows using `RTools` follow the instructions in this [readme](https://github.com/r-windows/r-base#readme) file.
 
-## Editors and Tools
-
-## Directory structure
+## References (chapterwise or at the end of the guide?)
