--- a/11-bug_tracking.Rmd
+++ b/11-bug_tracking.Rmd
@@ -30,13 +30,27 @@ When you are in doubt that there is a bug:
 
 4. If some function is working, but it is not defined in the best generalised way, then consult some to look over your code. This may perhaps not be a bug, instead it might be an alternative way of writing the function.
 
+## Checking if a bug is already reported
+
+The first step before filing a bug report is to see whether the problem has already been reported. Checking if the bug is reported will:
+
+1. Save time for you and the developers
+
+2. Help you see if the bug is already fixed for the next release
+
+3. Lead you to learn what needs to be done to fix it
+
+4. Determine if any additional information is needed
+
+The sections that follow discuss where to check whether a bug is already reported.
+
 ## Levels of contributing to bug / What do you do when you find a bug?
 
-1. [Report](#ReportBug) the bug.
+1. [Report](#ReportBug) the bug (if it is not alreasy reported).
 
 2. [Test](provide hyperlink to the section/chapter which discusses this) the bug.
 
-3. [Fix](provide hyperlink to the section/chapter which discusses this) the bug: Fixing a bug might require relatively more time. You may start a conversation about it either on BugZilla (link here) or on the GitHub mirror (link here). This would require engagement with $\textsf{R}$ Core team.
+3. [Fix](hyperlink to the chapter on the lifecycle of a patch) the bug: Fixing a bug might require relatively more time. You may start a conversation about it either on BugZilla (link here) or on the GitHub mirror (link here). This would require engagement with $\textsf{R}$ Core team.
 
 ## What are some places where you may find a bug?
 
@@ -46,11 +60,10 @@ You may find a bug in:
 
 2. In the [$\textsf{R}$ Core-supported packages and/or their documentations](#RCorePkgBug).
 
-3. In the $\textsf{R}$ language.
+3. In the [$\textsf{R}$ language](#RLangBug).
 
-4. In packages and/or their documentations which are not supported by the $\textsf{R}$ Core.
+4. In [packages and/or their documentations which are not supported by the $\textsf{R}$ Core](#nonRCorePkgBug).
 
-## Using the Bug Tracker (BugZilla or GitHub Mirror)
 ## How to report a bug? {#ReportBug}
 
 Once you are confirmed that there is a bug, you need to submit a report so that it gets fixed.
@@ -69,29 +82,44 @@ Once you are confirmed that there is a bug, you need to submit a report so that 
 
 3. If you want to submit the bug report using Bugzilla, please ensure that you have a Bugzilla account. To get a Bugzilla account, please send an e-mail to `bug-report-request@r-project.org` from the address that you want to use as your login. In this e-mail, briefly explain why you need an account. A volunteer shall then create a Bugzilla account and add you to $\textsf{R}$'s Bugzilla members.
 
+4. Please ensure whether the bug is already fixed (in the upcoming changes in R) or reported (search for it from those already reported on Bugzilla, either on [search existing bug reports](https://bugs.r-project.org/bugzilla/query.cgi), may use the [advanced search](https://bugs.r-project.org/bugzilla/query.cgi?format=advanced) option here,  or [show open bugs new-to-old](https://bugs.r-project.org/bugzilla/buglist.cgi?bug_file_loc_type=allwordssubstr&bug_status=NEW&bug_status=ASSIGNED&bug_status=CONFIRMED&bug_status=REOPENED&bug_status=UNCONFIRMED&bugidtype=include&chfieldto=Now&cmdtype=doit&emailassigned_to1=1&emailassigned_to2=1&emailcc2=1&emailreporter2=1&emailtype1=substring&emailtype2=substring&field0-0-0=noop&long_desc_type=substring&order=bugs.delta_ts%20desc&query_format=advanced&short_desc_type=allwordssubstr&type0-0-0=noop)). If you are submitting the report as an issue on the GitHub Mirror, then please check the currently $\textit{open}$ and $\textit{closed}$ issues first, to find if it is already reported or resolved. Do not submit a report in such a case. 
 
-## (good) Social practices in reporting bugs / Expectations of a (good) bug report
+### Bug in the $\textsf{R}$ Language {#RLangBug}
 
-### Checking if a bug already exists
+1. If there is a bug in the $\textsf{R}$ language itself, then you need to report using the same procedure and precautions as explained [above](#RCorePkgBug).
 
-### Reporting a bug
+### Bug in the non $\textsf{R}$ Core-supported packages and/or their documentations {#nonRCorePkgBug}
 
-### Understanding the issue’s progress and status
+1. For packages that are not maintained by the $\textsf{R}$ Core, the bug reports are usually submitted to their maintainer(s). You can find who is the package maintainer by running either of the commands `maintainer("package_name")` or `packageDescription("package_name")`.
 
-## Disagreement With a Resolution on the Bug Tracker
+2. In $\textsf{R}$ the running function `bug.report(package = "package_name")` shall direct you to either the GitHub issue tracker of the package, or to the bug tracking web page, or towards composing an e-mail to the package maintainer. This function `bug.report` is disabled in $\textbf{RStudio}$.
 
-## Helping Triage Issues
+3. Please ensure that your bug is not already reported or fixed before reporting it in any of the ways suggested above.
 
-### Classifying Reports
+## Good practices in reporting bugs / Expectations of a (good) bug report
 
-### Reviewing Patches
+If you follow the practices given below, you will come up with a good bug report which might make it easier for the Maintainer(s) to fix the bug.
 
-### Finding an Issue You Can Help With
+1. Include a minimal reproducible example of the bug in your report. The maintainer should be able to quickly reproduce the bug on using the minimal example that you provide.
 
-## Gaining the “Developer” Role on the Bug Tracker
+2. Mention the software architecture on which the bug occurred. 
 
-## The Meta Tracker
+In addition to the above, here are the [bug writing guidelines](https://bugs.r-project.org/bugzilla/page.cgi?id=bug-writing.html) on Bugzilla. The [bug reporting](https://www.r-project.org/bugs.html#writing-a-good-bug-report) documentation in R also the discusses practices to write a good bug report.
 
-## Python Dev Guide
+Once you have successfully reported a bug, you will likely receive an update each time an action is taken on the bug. On Bugzilla, the report may be given one of the following status: New, Assigned, Confirmed, Reopened, Unconfirmed.
 
-## References
+## Disagreement with a resolution on the bug tracker
+
+As humans, there might be differences of opinions from time to time. What needs to be considered here is that, we are respectful of the fact that care, thought, and volunteer time has gone into the resolution of the issue or bug. 
+
+If you take some time, then on reflection, the resolution steps may seem more reasonable than you initially thought. If you still feel that the resolution is incorrect, then raise a thoughtful question to the person who resolved it. If the issue was carefully thought about in the first place then is less likely to win any conversion of thought.
+
+As a reminder, issues closed by a core developer on the GitHub Mirror have already been carefully considered. Please do not reopen a closed issue.
+
+## See also
+
+1. [Reporting a bug](https://www.r-project.org/bugs.html)
+
+2. [R FAQ on bugs](https://mac.r-project.org/man/R-FAQ.html#R-Bugs)
+
+3. [Bugzilla guidelines of reporting a bug](https://bugs.r-project.org/bugzilla/page.cgi?id=bug-writing.html)
