--- a/02-getting_started.Rmd
+++ b/02-getting_started.Rmd
@@ -4,33 +4,23 @@ These instructions cover how to install $\textsf{R}$ in Windows. The tools requi
 
 ## Installing $\textsf{R}$
 
-To install $\textsf{R}$ in Windows follow these steps:
+1. The binary builds of $\textsf{R}$ for Windows can be downloaded and installed from [here](https://cran.r-project.org/bin/windows/base/). Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel. 
 
-1. Go to https://cran.r-project.org.
+2. Click on the download links to download an executable installer.
 
-2. Select `Download R for Windows`. You will be directed to a page which shows `Subdirectories` for installing R on Windows.
-
-3. Select `base` subdirectory. Alternatively, you can select `install R for the first time`, it leads to the same page. The current official stable release distribution of $\textsf{R}$ can be downloaded from here. (Along with the link to the current official stable release, links to the development snapshot build and to the previous releases, are also available on this page).
-
-4. This distribution is distributed as an installer `R-x.y.z-win.exe`. The `x.y.z` in the $\textsf{R}$ system version represent the major, minor, and patchlevel numbers, respectively.
-
-5. This has to be run in the Windows-style installer.
-
-6. Select the language while installing, read the public license information, and select destination location to the start the installation. You will be prompted to select components at this stage: `User installation`, `32-bit User installation`, `64-bit User installation`, or `Custom installation`. The default option may be opted for the questions from this step onwards. 
-
-7. Complete the installation.
+3. Select the language while installing, read the public license information, and select destination location to the start the installation. You will be prompted to select components at this stage: `User installation`, `32-bit User installation`, `64-bit User installation`, or `Custom installation`. The default option may be opted for the questions from this step onwards to complete the installation. 
 
 ## General instructions
 
 1. If you install the latest version or R-patched or R-devel, it will not over-write the previous installation(s) in your Windows machine.
 
-2. Daily [tarballs](https://stat.ethz.ch/R/daily/) are available for the patched version of the current release (`r-patched`), and the development version of the current release (`r-devel`). The same are also available via the [R Subversion repository](https://svn.R-project.org/R/)
+2. R uses a ‘major.minor.patchlevel’ version numbering scheme. Accordingly there are three are different versions of $\textsf{R}$ available as binary builds: the latest official release (`r-release`), the latest patched release (`r-patched`), and the latest development (`r-devel`). The `r-devel` is the next minor or eventually major release development version of $\textsf{R}$. Mostly, bug fixes are introduced in `r-patched`, while `r-devel` is for introducing new features.
 
 ## Building $\textsf{R}$ and $\textsf{R}$ packages
 
 ### What tools you need to build $\textsf{R}$ from source on Windows?
 
-1. `RTools` is the [subdirectory](https://cran.r-project.org/bin/windows/Rtools/) which you want to build $\textsf{R}$ or your own $\textsf{R}$ package(s) on Windows. 
+1. [RTools](https://github.com/r-windows/docs/blob/master/faq.md#what-is-rtools) is the toolchain bundle that you can use to build, $\textsf{R}$ base and $\textsf{R}$ packages containing compiled code, on Windows.
 
 2. You also need a distribution of $\LaTeX$ installed for building $\textsf{R}$ and checking packages. The `MiKTeX` distribution of $\LaTeX$ that is used on CRAN can be downloaded from https://miktex.org.
 
@@ -42,7 +32,13 @@ To install $\textsf{R}$ in Windows follow these steps:
 
 ### How to build $\textsf{R}$?
 
-To build $\textsf{R}$ for Windows using `RTools` follow the instructions in this [readme](https://github.com/r-windows/r-base#readme) file.
+To build $\textsf{R}$ for Windows using `RTools` follow the instructions in this [readme](https://github.com/r-windows/r-base#readme) file. There are two options available to build $\textsf{R}$. One is the quick development build and the other option is the full installer build.
+
+For development and testing, you need only the quick development build. Because, the quick build avoids building the manuals, which are generally not needed for development and testing. 
+
+However, even for the quick build there are some [default requirements](https://github.com/r-windows/r-base/blob/master/quick-build.sh). For instance, `MikTeX` is to be installed in `C:/Program Files` and you have 64-bit $\textsf{R}$. If necessary, these defaults can be customised. The installation path of `MikTex` can be customised [here](https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13) whereas the Windows bit can be customised [here](https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6).
+
+The full installer build is for building the complete installer as it appears on CRAN. It will build both the 32-bit and 64-bit $\textsf{R}$, the pdf manuals, and the installer program. You will use this to create the binary builds and not when building $\textsf{R}$ from the source yourself.
 
 ## See also
 
@@ -53,3 +49,5 @@ To build $\textsf{R}$ for Windows using `RTools` follow the instructions in this
 3. [R for Windows FAQ](https://cran.r-project.org/bin/windows/base/rw-FAQ.html)
 
 4. [Rtools40 manual for Windows](https://cran.r-project.org/bin/windows/Rtools/)
+
+5. [R FAQ](https://cran.r-project.org/doc/FAQ/R-FAQ.html)
