--- a/11-bug_tracking.Rmd
+++ b/11-bug_tracking.Rmd
@@ -17,7 +17,8 @@ You may find a bug in $\textsf{R}$ if:
 $\textbf{Note}$:
 When you are in doubt that there is a bug:
 
-1. Make sure whether the bug appears in a clean session of $\textsf{R}$. Many a times, there are variables/commands/functions stored in history which might causes issues. Hence, check in a clean session. To do so, launch $\textsf{R}$ from the command line with the `--vanilla` option. 
+1. Make sure whether the bug appears in a clean session of $\textsf{R}$. Many times, there are variables/commands/functions stored in history which might cause issues. Hence, check if the issue happens in a clean session. To do so, launch $\textsf{R}$ from the command line with the `--vanilla` option. 
+
 
 2. At times the code that is written is very complicated, has numerous package and file dependencies, has many function calls, etc.. In such scenarios it is quite common that the code throws an error and you are not able to solve it. You may tend to think that there is a bug that needs to be reported. Before doing so, try to produce a minimum working example of the code for the section where the error occurred. Add only those package and files which are required by that section, and see if the error appears still. Using this approach shall solve most of the errors.
 
